style: make "stop timer" button always be visible

--- a/app/renderer/Tasks/TasksWindow.scss
+++ b/app/renderer/Tasks/TasksWindow.scss
@@ -60,7 +60,7 @@
             &.--playback {
                 align-self: center;
 
-                .IconAsInput {
+                .IconAsInput.icofont-ui-play {
                     display: none;
                 }
             }
@@ -88,7 +88,7 @@
         &:hover {
             background-color: #f5f5f5;
 
-            .TCol.--playback .IconAsInput {
+            .TCol.--playback .IconAsInput.icofont-ui-play {
                 display: block;
             }
         }
